# linux-programming

./: README  rlimit_nproc.c
proc-1/: .gitignore  Makefile  config.h.in  configure.ac
proc-1/lib/: Makefile
proc-1/procres/: rlimit_nproc  rusage  rusage_wait
procres/: Makefile  configure.ac  rlimit_nproc.c
