AC_INIT([rlimit_nproc], [0.1], [Michael Kerrisk], [rlimit_nproc], [http://man7.org/tlpi/code/online/dist/procres/])
AC_PREREQ([2.59])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_CHECK_HEADERS([alt_functions.h])
AC_CHECK_HEADERS([error_functions.h])
AC_CHECK_HEADERS([get_num.h])
AC_CHECK_HEADERS([print_rlimit.h])
AC_CHECK_HEADERS([tlpi_hdr.h])
AC_OUTPUT
